--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="https://github.com/Mayara-Ribeiro" target="_blank"><input type="button" value="Github" class="github"></a>
                     </div>
                 </div>
-                <img src="assents/undraw_fitting_piece_re_pxay 1.svg" alt="Imagem">
+                <img src="assents/undraw_fitting_piece_re_pxay 1.svg" alt="Imagem" class="Imagem1">
             </div>
         </section>      
     
@@ -85,7 +85,9 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2024 - Meu Portfólio. Todos os direitos reservados.</p>
+        <a href="https://www.linkedin.com/in/mayara--ribeiro/" target="_blank"><img src="assents/linkedin.png" class="img-linkedin"></a>
+        <a href="mayararibeirost@gmail.com" target="_blank"><img src="assents/gmail.png" class="img-linkedin"></a>
+        
     </footer>
 </body>
 </html>
